--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jest": "^28.1.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "validator": "^13.7.0"
   },
