--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "validator": "^13.7.0"
   },
